--- a/pwa_colorthief_2/app.css
+++ b/pwa_colorthief_2/app.css
@@ -10,7 +10,7 @@ body {
 
 #swatches {
 	display: grid;
-	grid-template-columns: 20% 20% 20% 20% 20%;
+	grid-template-columns: repeat(5, 1fr);
 	height: 50px;	
 }
 
