--- a/vueweather/v2/main.css
+++ b/vueweather/v2/main.css
@@ -1,14 +1,16 @@
 
+/*
 .darken {
 	background-image:linear-gradient(
 		rgba(0,0,0,0.5),
 		rgba(0,0,0,0.5)
 	), url(rainkids.jpg);
 }
+*/
 
 body {
 	background-size:contain;
-	background:url(rainkids.jpg);
+	background-color:black;
 }
 
 #content {
